--- a/bootstrap/form-1/index2.html
+++ b/bootstrap/form-1/index2.html
@@ -91,7 +91,7 @@
 										</div>
 				                        
 				                    	<div class="form-group">
-				                    		<label class="sr-only" for="form-username">Rogers Account Number</label>
+				                    		<label class="sr-only" for="form-username">B Number</label>
 				                        	<input type="text" name="form-username" placeholder="Rogers Account Number" class="form-username form-control" id="form-username" maxlength="9">
 				                        </div>
 				                        
@@ -130,19 +130,19 @@
 										<div class="form-group" id="firstNumber">
 											<div class="funkyradio" id="firstNumber">
 												<div class="funkyradio-default">
-													<input type="radio" name="tab" id="radio1" value="80"> <label for="radio1">Premium Plus Tab ($80/mo)</label>
+													<input type="radio" name="tab" id="radio1" value="80"> <label for="radio1">PP Tab ($80/mo)</label>
 												</div>												
 												<div class="funkyradio-primary">
-													<input type="radio" name="tab" id="radio2" value="65"> <label for="radio2">Premium Tab ($65.00/mo)</label>
+													<input type="radio" name="tab" id="radio2" value="65"> <label for="radio2">P Tab ($65.00/mo)</label>
 												</div>
 									        <div class="funkyradio-success">
-									            	<input type="radio" name="tab" id="radio3" value="60"> <label for="radio3">Smart Tab ($60.00/mo)</label>
+									            	<input type="radio" name="tab" id="radio3" value="60"> <label for="radio3">S Tab ($60.00/mo)</label>
 												</div>
 									        <div class="funkyradio-danger">
-									        		<input type="radio" name="tab" id="radio4" value="55"> <label for="radio4">No Tab ($55.00/mo)</label>
+									        		<input type="radio" name="tab" id="radio4" value="55"> <label for="radio4">N Tab ($55.00/mo)</label>
 												</div>
 									        <div class="funkyradio-warning">
-									        		<input type="radio" name="tab" id="radio5" value="35"> <label for="radio5">Basic Tab ($?/mo)</label>
+									        		<input type="radio" name="tab" id="radio5" value="35"> <label for="radio5">B Tab ($?/mo)</label>
 												</div>
 											</div>
 											  	<div style="line-height:50%;"><br></div>
