--- a/bootstrap/form-1/index2.html
+++ b/bootstrap/form-1/index2.html
@@ -42,7 +42,7 @@
                 	
                     <div class="row">
                         <div class="col-sm-8 col-sm-offset-2 text">
-                            <h1><strong>Share Everything</strong><br> Calculator & Letter Generator</h1>
+                            <h1><strong>SE</strong><br> Calculator & Letter Generator</h1>
                             <div class="description">
                             	<p>
 	                            	This is a free responsive <strong>"login and register forms"</strong> template made with Bootstrap. 
