--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+  <p>Located under: https://github.com/NickChand/nickchand.github.io/blob/master/index.html</p>
 </body>
 </html>
